--- a/css/left.css
+++ b/css/left.css
@@ -1,44 +1,54 @@
-.first__ilne {
-  display: flex;
-  align-items: center;
-}
-
 .first__profile {
+  text-align: center;
   background-color: var(--navy);
-  /* 중앙 정렬 */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   color: white;
-  height: 100%;
-  padding-top: 20px;
+  border: 1px solid red;
 }
 
 .first__profile h2 {
-  margin-top: 0;
+  font-size: 2em;
 }
 
 .first__profile h3 {
-  margin-bottom: 0;
+  font-size: 1.5em;
 }
 
-.first__profile img {
-  width: 35%;
-  height: 35%;
-  background-color: white;
-  border-radius: 100%;
-  padding: 0 30px 30px 30px;
+.pic a {
+  background-image: url("../img/profilepics.png");
+  padding-top: -50px;
+  width: 421px;
+  height: 421px;
+  display: inline-block;
+  text-indent: -9999px;
+  /* border: 1px solid red; */
+  border-radius: 15%;
 }
 
-.first__profile_div {
-  width: 70%;
-  margin-top: 10px;
-  margin-left: 10px;
+.pic a:hover {
+  background-position-y: bottom;
 }
 
-.first__profile_div span {
-  display: flex;
-  justify-content: flex-start;
-  font-size: 12px;
-  margin-top: 5px;
+.icons {
+  margin: 30px 0; /*상하 좌우 */
+  border: 1px solid red;
+}
+
+.icons a {
+  background-image: url("../img/icons.png");
+  width: 32px;
+  height: 32px;
+  display: inline; /* 가로로 배치되게 만듦*/
+  text-indent: -9999px; /* 안에 포함된 텍스트 삭제 */
+  background-repeat: no-repeat; /* 반복하지 않음 */
+}
+
+/* 아이콘 위치 잡아주기 */
+.icons a.velog {
+  background-position: left;
+}
+.icons a.github {
+  background-position: center;
+}
+.icons a.gmail {
+  background-position: right;
 }
