--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body,
 h1,
 h2,
 h3,
-p,
 ul,
 li,
 dl,
@@ -20,7 +19,7 @@ h1,
 h2,
 h3 {
   font-size: 100%; /* defaultVlue */
-  font-weight: normal;
+  font-weight: bolder;
 }
 /* CSS Reset zone */
 
