--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,13 @@ li {
   .first__profile {
     position: fixed;
     left: 0;
+    top: 10px;
     width: 50vw; /* view port 기준에서 50%의 너비를 받아와라 */
     height: 100vh;
-    padding: 15% 0;
     /* border: 1px solid red; */
+  }
+  .pic a {
+    margin-top: 35px;
   }
   .secon__profile {
     margin-left: 50vw;
